# py-backend-app

./: .env  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  playground.py  pyproject.toml  requirements.txt
app/: auth.py  config.py  crud.py  database.py  models.py  schema.py
app/routers/: login.py  registration.py  root.py  verify_2fa.py
test/: test_auth.py  test_crud.py  test_login.py  test_registration.py  test_root.py
