[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Andrea Evangelista"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
bcrypt = "^4.0.1"
sqlalchemy = "^2.0.12"
passlib = "^1.7.4"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.6"
pydantic = {extras = ["email"], version = "^1.10.7"}
httpx = "^0.24.0"
pyjwt = "^2.6.0"
python-multipart = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
